<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_info"
        android:title="@string/get_info" />

    <item android:title="Scripts">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_culture"
                    android:icon="@drawable/culture"
                    android:title="@string/get_culture" />
                <item
                    android:id="@+id/nav_user_get"
                    android:icon="@drawable/user"
                    android:title="@string/get_user" />
                <item
                    android:id="@+id/nav_user_create"
                    android:icon="@drawable/user_create"
                    android:title="@string/nav_user_create" />
                <item
                    android:id="@+id/nav_users_get"
                    android:icon="@drawable/users"
                    android:title="@string/users" />
                <item
                    android:id="@+id/nav_disk"
                    android:icon="@drawable/disk"
                    android:title="@string/show_disk_space" />
                <item
                    android:id="@+id/nav_services"
                    android:icon="@drawable/services"
                    android:title="@string/services" />
                <item
                    android:id="@+id/nav_processes"
                    android:icon="@drawable/process"
                    android:title="@string/processes" />
                <item
                    android:id="@+id/nav_inactive"
                    android:icon="@drawable/sleep"
                    android:title="@string/inactive" />
            </group>
        </menu>
    </item>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
