<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cz.mowin.fragment.UserCreateFragment"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:gravity="left|center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Create User"
                android:id="@+id/textView5"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:paddingTop="10dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitCenter"
                android:background="@null"
                android:gravity="right"
                android:id="@+id/btn_user_create_help"
                android:src="@drawable/help" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_run"
            android:id="@+id/btn_user_create_run"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:hint="@string/prompt_name"
        android:id="@+id/tw_user_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:hint="@string/prompt_login"
        android:id="@+id/tw_user_login" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="50"
        android:hint="@string/prompt_password"
        android:id="@+id/tw_user_password" />

    </android.support.design.widget.TextInputLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:background="#cccccc"
        android:padding="5dp"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tw_user_create_output"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.41" />
        </ScrollView>


</LinearLayout>
