<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cz.mowin.fragment.ServiceFragment"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="Service"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="left|center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:paddingTop="10dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitCenter"
                android:background="@null"
                android:gravity="right"
                android:id="@+id/btn_service_help"
                android:src="@drawable/help" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_start"
            android:id="@+id/btn_service_start"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_stop"
            android:id="@+id/btn_service_stop"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_restart"
            android:id="@+id/btn_service_restart"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="#cccccc"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tw_service_output"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </ScrollView>

</LinearLayout>
